Fix Swagger Doc Separated
